--- a/WYVideo/system/src/main/resources/application.properties
+++ b/WYVideo/system/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=system
 server.servlet.context-path=/system
 #\u7AEF\u53E3\u53F7
 server.port=9001
-#eurakeserve\u5730\u5740
+#\u5C06\u670D\u52A1\u6CE8\u518C\u5230eurakeserve\u5730\u5740
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #ip\u6CE8\u518C
 eureka.instance.prefer-ip-address=true
