--- a/WYVideo/pom.xml
+++ b/WYVideo/pom.xml
@@ -7,7 +7,7 @@
 		<module>eureka</module>
 		<module>system</module>
 		<module>gateway</module>
-		<module>serve</module>
+		<module>server</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -32,6 +32,12 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<!--	二方包serve		-->
+			<dependency>
+				<groupId>pxxy.wzf</groupId>
+				<artifactId>server</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 			<!--	mysq连接	-->
 			<dependency>
@@ -64,6 +70,24 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<!--	mybatis generator 自动生成代码插件		-->
+			<plugin>
+				<groupId>org.mybatis.generator</groupId>
+				<artifactId>mybatis-generator-maven-plugin</artifactId>
+				<version>1.3.7</version>
+				<configuration>
+					<configurationFile>src/main/resources/generator/generatorConfig.xml</configurationFile>
+					<overwrite>true</overwrite>
+					<verbose>true</verbose>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>mysql</groupId>
+						<artifactId>mysql-connector-java</artifactId>
+						<version>5.1.37</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
