--- a/WYVideo/server/src/main/resources/config/application.properties
+++ b/WYVideo/server/src/main/resources/config/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 #\u6253\u5370\u67E5\u8BE2\u4FE1\u606F
 logging.level.pxxy.wzf.server.mapper=trace
+#\u6DFB\u52A0mapper\u6587\u4EF6\u8DEF\u5F84
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
