--- a/WYVideo/pom.xml
+++ b/WYVideo/pom.xml
@@ -62,6 +62,23 @@
 				<artifactId>springfox-swagger-ui</artifactId>
 				<version>2.9.2</version>
 			</dependency>
+			<dependency>
+				<groupId>com.github.xiaoymin</groupId>
+				<artifactId>swagger-bootstrap-ui</artifactId>
+				<version>1.8.9</version>
+			</dependency>
+			<!--	lombok		-->
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.12</version>
+			</dependency>
+			<!--	fastjson		-->
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>1.2.60</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
