--- a/WYVideo/gateway/src/main/resources/application.properties
+++ b/WYVideo/gateway/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.cloud.gateway.routes[0].id=system
 spring.cloud.gateway.routes[0].uri=lb://system
 spring.cloud.gateway.routes[0].predicates[0].name=Path
 spring.cloud.gateway.routes[0].predicates[0].args[0]=/system/**
+#business\u8F6C\u53D1
+spring.cloud.gateway.routes[1].id=business
+#spring.cloud.gateway.routes[1].uri=http://127.0.0.1:9002
+spring.cloud.gateway.routes[1].uri=lb://business
+spring.cloud.gateway.routes[1].predicates[0].name=Path
+spring.cloud.gateway.routes[1].predicates[0].args[0]=/business/**
