1.实现演员的增删改查

--- a/WYVideo/business/pom.xml
+++ b/WYVideo/business/pom.xml
@@ -56,5 +56,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
+        <!--    雪花算法id    -->
+        <dependency>
+            <groupId>com.github.yitter</groupId>
+            <artifactId>yitter-idgenerator</artifactId>
+        </dependency>
     </dependencies>
 </project>
