--- a/WYVideo/pom.xml
+++ b/WYVideo/pom.xml
@@ -80,6 +80,24 @@
 				<artifactId>fastjson</artifactId>
 				<version>1.2.60</version>
 			</dependency>
+			<!--	集成pagehelper	-->
+			<dependency>
+				<groupId>com.github.pagehelper</groupId>
+				<artifactId>pagehelper-spring-boot-starter</artifactId>
+				<version>1.2.3</version>
+			</dependency>
+			<!--  工具包			-->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.4</version>
+			</dependency>
+			<!--	雪花算法id		-->
+			<dependency>
+				<groupId>com.github.yitter</groupId>
+				<artifactId>yitter-idgenerator</artifactId>
+				<version>1.0.6</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
