--- a/WYVideo/pom.xml
+++ b/WYVideo/pom.xml
@@ -9,6 +9,7 @@
 		<module>gateway</module>
 		<module>server</module>
 		<module>business</module>
+		<module>generator</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -97,6 +98,18 @@
 				<groupId>com.github.yitter</groupId>
 				<artifactId>yitter-idgenerator</artifactId>
 				<version>1.0.6</version>
+			</dependency>
+			<!--   模板引擎freemarker     -->
+			<dependency>
+				<groupId>org.freemarker</groupId>
+				<artifactId>freemarker</artifactId>
+				<version>2.3.29</version>
+			</dependency>
+			<!--	读取xml信息		-->
+			<dependency>
+				<groupId>org.dom4j</groupId>
+				<artifactId>dom4j</artifactId>
+				<version>2.1.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
