--- a/WYVideo/gateway/src/main/resources/application.properties
+++ b/WYVideo/gateway/src/main/resources/application.properties
@@ -20,3 +20,10 @@ spring.cloud.gateway.routes[1].id=business
 spring.cloud.gateway.routes[1].uri=lb://business
 spring.cloud.gateway.routes[1].predicates[0].name=Path
 spring.cloud.gateway.routes[1].predicates[0].args[0]=/business/**
+
+#file\u8F6C\u53D1
+spring.cloud.gateway.routes[2].id=file
+#spring.cloud.gateway.routes[2].uri=http://127.0.0.1:9002
+spring.cloud.gateway.routes[2].uri=lb://file
+spring.cloud.gateway.routes[2].predicates[0].name=Path
+spring.cloud.gateway.routes[2].predicates[0].args[0]=/file/**
