--- a/WYVideo/pom.xml
+++ b/WYVideo/pom.xml
@@ -10,7 +10,8 @@
 		<module>server</module>
 		<module>business</module>
 		<module>generator</module>
-	</modules>
+        <module>file</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -110,6 +111,22 @@
 				<groupId>org.dom4j</groupId>
 				<artifactId>dom4j</artifactId>
 				<version>2.1.1</version>
+			</dependency>
+			<!--  阿里云OSS			-->
+			<dependency>
+				<groupId>com.aliyun.oss</groupId>
+				<artifactId>aliyun-sdk-oss</artifactId>
+				<version>3.10.2</version>
+			</dependency>
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>fastjson</artifactId>
+				<version>1.2.60</version>
+			</dependency>
+			<dependency>
+				<groupId>com.aliyun</groupId>
+				<artifactId>aliyun-java-sdk-core</artifactId>
+				<version>4.5.3</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
