--- a/WYVideo/file/pom.xml
+++ b/WYVideo/file/pom.xml
@@ -51,6 +51,11 @@
             <groupId>com.aliyun</groupId>
             <artifactId>aliyun-java-sdk-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>aliyun-java-sdk-vod</artifactId>
+            <version>2.15.11</version>
+        </dependency>
     </dependencies>
 
     <build>
