--- a/WYVideo/file/src/main/resources/application.properties
+++ b/WYVideo/file/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.servlet.multipart.max-request-size=120MB
 
 #\u963F\u91CC\u4E91\u4E0A\u4F20\u53C2\u6570
 #\u8D26\u53F7
-accessKeyId=LTAI5tKs1QzatW6cPJur57wF
+accessKeyId=****
 #\u5BC6\u7801
-accessKeySecret=KdWyELp0GzXfh5GeP4fQ0EvZ4n5cCp
+accessKeySecret=****
 #\u5730\u57DF\u8282\u70B9
 endpoint=https://oss-cn-chengdu.aliyuncs.com
 #\u5916\u7F51\u8DEF\u5F84
